cambio de numeración

--- a/latex/aplicaciones_edos.tex
+++ b/latex/aplicaciones_edos.tex
@@ -1,8 +1,8 @@
 
 
-%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%% section 105
-%%%%%%%%%%%%%%%%%%%%%%
+%
+% section 105
+%
 
 
 \section[Aplicaciones]{Aplicaciones de Ecuaciones Diferenciales de Primer Orden}
