Numeración total de ecuaciones

--- a/latex/aplicaciones_segundo_orden.tex
+++ b/latex/aplicaciones_segundo_orden.tex
@@ -72,33 +72,33 @@ La suma algebraica de las caídas de voltaje en un circuito eléctrico cerrado s
 
 
 {}
-\begin{align*}
+\begin{align}
 	RI + L\dfrac{dI}{dt}+\dfrac{1}{C}q-E(t)=0
-\end{align*}
+\end{align}
 
 
 {}
-\begin{align*}
+\begin{align}
 	I&=\dfrac{dq}{dt}\\
 	\dfrac{dI}{dt}&=\dfrac{d^{2}q}{dt^{2}}
-\end{align*}
+\end{align}
 
 
 
 {}
-\begin{align*}
+\begin{align}
 	\dfrac{d^{2}q}{dt^{2}}
 	+\dfrac{R}{L}\dfrac{dq}{dt}
 	+\dfrac{1}{LC}q =
 	\dfrac{1}{L}E(t)
-\end{align*}
+\end{align}
 
 
 {}
-\begin{align*}
+\begin{align}
 	q(0) &= q_{0}\\
 	I(0) &= \evat{\dfrac{dq}{dt}}{t=0}=I_{0}
-\end{align*}
+\end{align}
 
 
 {}
