--- a/latex/bases_y_dimension.tex
+++ b/latex/bases_y_dimension.tex
@@ -147,7 +147,7 @@ $$
         \end{bmatrix}}.
 $$
 
-Entonces \begin{align*}
+Entonces \begin{align}
           c_{1}\begin{bmatrix}
      1 \\ 0 \\ 2
     \end{bmatrix}+c_{2} \begin{bmatrix}
@@ -164,7 +164,7 @@ Entonces \begin{align*}
          0 \\ 0\\ 0
         \end{bmatrix}\\
 \Rightarrow c_{1}=c_{2}&=0.
-         \end{align*}
+         \end{align}
 
 Por tanto, $$\set{\begin{bmatrix}
      1 \\ 0 \\ 2
