--- a/latex/coeficientes_indeterminados.tex
+++ b/latex/coeficientes_indeterminados.tex
@@ -44,9 +44,9 @@ Si suponemos que $\phi(x)$ es un polinomio de grado $n,$ entonces
 
 {}
 Recordemos que la solución general de la ecuación $y''-y'-2y=0$ está dada por...
-\begin{align*}
+\begin{align}
 	y_{h}(x)=c_{1}e^{-x}+c_{2}e^{2x}
-\end{align*}
+\end{align}
 
 {}
 %\begin{figure}
@@ -135,9 +135,9 @@ Si $\phi(x)=e^{\a x}p_{n}(x),$ entonces
 {}
 \begin{resuelto}
 	Resolver
-	\begin{align*}
+	\begin{align}
 		y'' = e^{-x}x^2
-	\end{align*}
+	\end{align}
 
 \end{resuelto}
 
@@ -155,9 +155,9 @@ Si $\phi(x)=ke^{\a x}\sin(\b x)$ o $\phi(x)=ke^{\a x}\cos(\b x),$ entonces
 {}
 \begin{resuelto}
 	Resuelva
-	\begin{align*}
+	\begin{align}
 		y'' = e^{-x}\cos(3x)
-	\end{align*}
+	\end{align}
 
 \end{resuelto}
 
@@ -188,9 +188,9 @@ Aun más, si $\phi(x)=ke^{\a x}\sin(\b x)p_{n}(x)$ o $\phi(x)=ke^{\a x}\cos(\b x
 {}
 \begin{resuelto}
 	Resuelve la ecuación
-	\begin{align*}
+	\begin{align}
 		y''-y'-2y = \dfrac{1}{2}e^{-x}
-	\end{align*}
+	\end{align}
 
 \end{resuelto}
 
@@ -207,14 +207,14 @@ Aun más, si $\phi(x)=ke^{\a x}\sin(\b x)p_{n}(x)$ o $\phi(x)=ke^{\a x}\cos(\b x
 %%%
 {}
 Consideremos la ecuación diferencial
-\begin{align*}
+\begin{align}
 	\label{superposicion}
 	L[y] = \phi_{1}(x) + \phi_{2}(x)
-\end{align*}
+\end{align}
 donde $L$ es un operador diferencial lineal con coeficientes constantes de la forma
-\begin{align*}
+\begin{align}
 	L[y] = y^{(n)}+...+a_{1}y'+a_{0}y
-\end{align*}
+\end{align}
 
 
 
@@ -233,9 +233,9 @@ $$
 {}
 \begin{resuelto}
 	Resuelve la ecuación
-	\begin{align*}
+	\begin{align}
 		y''-y'-2y=2e^{3x}-3t^{2}
-	\end{align*}
+	\end{align}
 
 \end{resuelto}
 
