--- a/latex/espacios_vectoriales.tex
+++ b/latex/espacios_vectoriales.tex
@@ -12,11 +12,11 @@ Hasta ahora hemos considerado a los vectores como elementos de un espacio $$\R^{
  \begin{enumerate}
   \item(Cerradura)  ${u}+{v}=(u_{1},u_{2})+(v_{1},v_{2})=(u_{1}+v_{1},u_{2}+v_{2}),$ es un vector en $\R^{2},$
   \item(Asociatividad) Si $w=(w_{1},w_{2})$ es otro vector en $\R^{2},$ entonces
-  \begin{align*}
+  \begin{align}
 (u+v)+w&=\left( (u_{1},u_{2})+(v_{1},v_{2}) \right) + (w_{1},w_{2}) \\
 &=(u_{1},u_{2}) + \left( (v_{1},v_{2}) + (w_{1},w_{2}) \right) \\
 &=u+(v+w),
-  \end{align*}
+  \end{align}
 \item(Conmutatividad)
 $
 u+v=(u_{1}+v_{1},u_{2}+v_{2})=(v_{1}+u_{1},v_{2}+u_{2})=v+u
