--- a/latex/fundamentos_ecuaciones_diferenciales.tex
+++ b/latex/fundamentos_ecuaciones_diferenciales.tex
@@ -161,11 +161,13 @@
 		Verifica que $ y = x^2-3x+2 $ es una solución particular de $ y''=2 $.
 	\end{resuelto}
 
-	\begin{ejemplo}
-		La solución general de $ y = xy'-y'^{2} $ es $ y = cx-c^{2} $.
+	\begin{resuelto}
+		Muestra que La solución general de $ y = xy'-y'^{2} $ es $ y = cx-c^{2} $.
+		\begin{observacion}
 
-		 Sin embargo, $ y=\dfrac{x^{2}}{4} $ es una solución que no se puede obtener sustituyendo $ c $.  Por tanto, es una solución particular.
-	\end{ejemplo}
+			Sin embargo, $ y=\dfrac{x^{2}}{4} $ es una solución que no se puede obtener sustituyendo $ c $.  Por tanto, es una solución particular.
+		\end{observacion}
+	\end{resuelto}
 
 
 \begin{definicion}
@@ -379,7 +381,7 @@ y la solución singular $y=\dfrac{x^{2}}{4}$ de la ecuación diferencial
 
 \begin{figure}
 	\centering
-	\includegraphics[width=.7\textheight,keepaspectratio=true]{./edo/solved_problem_02-05.png}
+	\includegraphics[width=\textwidth,keepaspectratio=true]{./edo/solved_problem_02-05.png}
 	\caption{La parábola es la envolvente de la familia de lineas rectas. }
 	% solved_problem_02-05.png: 587x387 px, 100dpi, 14.91x9.83 cm, bb=0 0 423 279
 	\label{fig:solved_problem_02-05}
@@ -442,7 +444,7 @@ si es que existe, puede encontrarse resolviendo simultaneamente las ecuaciones
 {Solución: Inciso (a)}
 \begin{figure}
 	\centering
-	\includegraphics[height=.5\textheight,keepaspectratio=true]{./edo/solved_problem_02-06.png}
+	\includegraphics[width=\textwidth,keepaspectratio=true]{./edo/solved_problem_02-06.png}
 	% solved_problem_02-06.png: 587x387 px, 100dpi, 14.91x9.83 cm, bb=0 0 423 279
 	\caption{Familia uniparamétrica $y=cx^2$}
 	\label{fig:solved0206}
