--- a/latex/nucleo_e_imagen.tex
+++ b/latex/nucleo_e_imagen.tex
@@ -20,18 +20,18 @@ $\ker(T) < V, \Im(T)<W.$
 
 \begin{proof}
  Si $\a\in \R$ y $u,v \in \ker(T),$ entonces
- \begin{align*}
+ \begin{align}
   T(\a u +v) &= \a T(u) + T(v) & \text{(Por linealidad de $T$)} \\
   &= \a 0 + 0 & \text{(Porque $T(u)=T(v)=0$)} \\
   &= 0 &
- \end{align*}
+ \end{align}
 Por tanto, $\ker(T)<V.$
 
 Ahora, si $\a\in \R$ y $w,w' \in \Im(T),$ entonces Existen $v,v'\in V$ tales que $T(v)=w, T(w')=v'.$ Por lo cual,
-\begin{align*}
+\begin{align}
  \a w + w' &= \a T(v) + T(v') \\
  &= T(\a v + v').
-\end{align*}
+\end{align}
 Como $\a v + v' \in V,$ entonces $\a w + w' \in W.$
 \end{proof}
 
@@ -55,11 +55,11 @@ Como $\a v + v' \in V,$ entonces $\a w + w' \in W.$
    \end{bmatrix}
  $$
  Esto equivale a resolver el sistema de ecuacuones
-\begin{align*}
+\begin{align}
  x+2y&=0\\
  z-y&=0 \\
  2x+7y-3x&=0,
-\end{align*}
+\end{align}
 que podemos reescribir en forma matricial como
 $$
 \begin{bmatrix}
@@ -77,10 +77,10 @@ $$
 \end{bmatrix},
 $$
 es decir, tenemos dos ecuaciones con tres incognitas
-\begin{align*}
+\begin{align}
  x + 2y &= 0 \\
 y -z &=0
- \end{align*}
+ \end{align}
 por lo que sustituyendo $y=z=t,$ tenemos que
 $$
 \begin{bmatrix}
@@ -148,10 +148,10 @@ $$
 $$
 
 De hecho, para cualesquiera $\lambda,\mu$, si escogemos una soluci\'on de las ecuaciones las ecuaciones
-\begin{align*}
+\begin{align}
  \lambda &= x+2z \\
  \mu &= y-z,
-\end{align*}
+\end{align}
 podemos escribir
 $$
 \begin{bmatrix}
