--- a/latex/problemas-primer-orden.tex
+++ b/latex/problemas-primer-orden.tex
@@ -9,34 +9,34 @@
 	\begin{enumerate}
 		\item
 		\label{exmp 02_01}
-		\begin{align*}
+		\begin{align}
 			\left(y''\right)^{2}+3x=2\left(y'\right)^3
-		\end{align*}
+		\end{align}
 		\item
 		\label{exmp 02:02}
-		\begin{align*}
+		\begin{align}
 			\dfrac{dy}{dx}+\dfrac{y}{x} = y^2
-		\end{align*}
+		\end{align}
 		\item
 		\label{exmp 02:03}
-		\begin{align*}
+		\begin{align}
 			\dfrac{d^{2}Q}{dt^{2}}-3\dfrac{dQ}{dt}+2Q = 4\sin(2t)
-		\end{align*}
+		\end{align}
 		\item
 		\label{exmp 02:04}
-		\begin{align*}
+		\begin{align}
 			\dfrac{dy}{dx}=\dfrac{x+y}{x-y}
-		\end{align*}
+		\end{align}
 
 		\item
-		\begin{align*}
+		\begin{align}
 			(x+y)dx+(y-x)dy = 0
-		\end{align*}
+		\end{align}
 		\item
-		\begin{align*}
+		\begin{align}
 			\dfrac{\partial^{2}V}{\partial x^{2}} +
 			\dfrac{\partial^{2}V}{\partial y^{2}} = 0
-		\end{align*}
+		\end{align}
 	\end{enumerate}
 
 \end{problema}
@@ -47,9 +47,9 @@
 	\begin{enumerate}[(i)]
 		%NUEVO ITEM
 		\item Encuentra la solución general de
-		\begin{align*}
+		\begin{align}
 			\left( 4x+xy^{2} \right)dx+\left( y+x^{2}y \right)dy = 0
-		\end{align*}
+		\end{align}
 
 		\item Encuentra la solución particular para $y(1)=2$.
 	\end{enumerate}
@@ -57,19 +57,19 @@
 
 \begin{problema}
 	Resuelve el problema de valor inicial
-\begin{align*}
+\begin{align}
 	\begin{cases}
 		\dfrac{dy}{dx}+3y=8 \\
 		y(0)=2
 	\end{cases}
-\end{align*}
+\end{align}
 \end{problema}
 
 \begin{problema}
 	Resuelve la ecuación
-	\begin{align*}
+	\begin{align}
 		\dfrac{dy}{dx} = \sec(y)\tan(x)
-	\end{align*}
+	\end{align}
 \end{problema}
 
 \subsection{Aplicaciones}
