--- a/latex/subespacios_vectoriales.tex
+++ b/latex/subespacios_vectoriales.tex
@@ -142,11 +142,11 @@ subespacios de V?
 
 \begin{resuelto}
  Sea $W$ el conjunto de todos los vectores $(x_{1},...,x_{5})$ que satisfacen
- \begin{align*}
+ \begin{align}
   2x_{1}-x_{2}+\frac{4}{3}x_{3}-x_{4}&=0 \\
   x_{1}+\frac{2}{3}x_{3}-x_{5}&=0 \\
   9x_{1}-3x_{2}+6x_{3}-3x_{4}-3x_{5}&=0.
- \end{align*}
+ \end{align}
 Mostrar que $W$ es subespacio vectorial de $\R^{5}.$
 \end{resuelto}
 
