--- a/latex/transformada_funciones_discontinuas.tex
+++ b/latex/transformada_funciones_discontinuas.tex
@@ -13,11 +13,11 @@
 
 	\begin{teorema}
 		\label{bron:thm:23.1}
-		\begin{align*}
+		\begin{align}
 		f(x) \ast g(x)&=g(x) \ast f(x)\\
 		f(x) \ast \left( g(x)+h(x) \right)
 		&= f(x)\ast g(x)+ f(x)\ast h(x).
-		\end{align*}
+		\end{align}
 
 	\end{teorema}
 
