--- a/latex/transformada_inversa_laplace.tex
+++ b/latex/transformada_inversa_laplace.tex
@@ -203,11 +203,11 @@ Otro m\'etodo útil que se recomienda repasar es la
 %
 %
 % {Ejemplo}
-% \begin{align*}
+% \begin{align}
 %  \dfrac{1}{x-1}+\dfrac{1}{2x+1}
 %  &= \dfrac{(2x+1)+(x-1)}{(x-1)(2x+1)} \\
 %  &= \dfrac{3x}{2x^{2}-x-1}
-% \end{align*}
+% \end{align}
 %
 % {}
 % El proceso inverso se conoce como \emph{fracciones parciales}.
@@ -218,22 +218,22 @@ Otro m\'etodo útil que se recomienda repasar es la
 %
 % {Caso 1}
 % Supongamos que podemos factorizar
-% \begin{align*}
+% \begin{align}
 %  Q(x) = \left( a_{1}x+b_{1} \right)...\left( a_{n}x+b_{n} \right)
-% \end{align*}
+% \end{align}
 % sin factores repetidos. En este caso,
-% \begin{align*}
+% \begin{align}
 %  \dfrac{P(x)}{Q(x)} =
 %  \dfrac{A_{1}}{a_{1}x+b_{1}}+...+\dfrac{A_{n}}{a_{n}x+b_{n}}.
-% \end{align*}
+% \end{align}
 %
 % {}
 % \begin{resuelto}
 %  \label{pre:exmp:9.8.1}
 % Encuentre la descomposición en fracciones parciales de
-% \begin{align*}
+% \begin{align}
 %  \dfrac{5x+7}{x^{3}+2x^{2}-x-2}.
-% \end{align*}
+% \end{align}
 % \end{resuelto}
 %
 %
@@ -241,34 +241,34 @@ Otro m\'etodo útil que se recomienda repasar es la
 % Suponga que la factorización de $Q(x)$ contiene el factor lineal $ax+b$ repetido $k$ veces, es decir, $(ax+b)^{k}$ es un factor de $Q(x)$.
 %
 % Entonces, en el caso de tal factor, la descomposición en fracciones parciales de $P(x)/Q(x)$ contiene
-% \begin{align*}
+% \begin{align}
 %  \dfrac{A_{1}}{ax+b}+\dfrac{A_{2}}{\left( ax+b \right)^{2}}+...+\dfrac{A_{k}}{\left( ax+b \right)^{k}}
-% \end{align*}
+% \end{align}
 %
 % {}
 % \begin{resuelto}
 %  \label{pre:exmp:9.8.2}
 %  Encuentre la descomposición en fracciones parciales de
-%  \begin{align*}
+%  \begin{align}
 %  \dfrac{x^{2}+1}{x\left( x-1
 %  \right)^{3}}
-% \end{align*}
+% \end{align}
 % \end{resuelto}
 %
 %
 % {Caso 3}
 % Supongamos que la factorización completa de $Q(x)$ contiene factores cuadráticos irreducibles $ax^{2}+bx+c$. Entonces, en el caso de tal facto, la descomposición en fracciones parciales de $P(x)/Q(x)$ tiene un termino de la forma
-% \begin{align*}
+% \begin{align}
 %  \dfrac{Ax+B}{ax^{2}+bx+c}.
-% \end{align*}
+% \end{align}
 %
 % {}
 % \begin{resuelto}
 %  \label{pre:exmp:9.8.3}
 %  Encuentre la descomposición en fracciones parciales de
-%  \begin{align*}
+%  \begin{align}
 %  \dfrac{2x^2-x+4}{x^{3}+4x}.
-% \end{align*}
+% \end{align}
 % \end{resuelto}
 %
 %
@@ -276,19 +276,19 @@ Otro m\'etodo útil que se recomienda repasar es la
 % Supongamos que la factorización de $Q(x)$ contiene el factor $\left( ax^{2}+bx+c \right)^{k},$ con $ax^{2}+bx+c$ irreducible.
 %
 % Entonces, la descomposición en fracciones parciales contiene los términos correspondientes
-% \begin{align*}
+% \begin{align}
 %  \dfrac{A_{1}x+B_{1}}{ax^{2}+bx+c}+...
 %  \dfrac{A_{2}x+B_{2}}{\left( ax^{2}+bx+c \right)^{2}}+...
 %  \dfrac{A_{k}x+B_{k}}{\left( ax^{2}+bx+c \right)^{k}}
-% \end{align*}
+% \end{align}
 %
 % {}
 % \begin{resuelto}
 %  \label{pre:exmp:9.8.4}
 %  Escriba la descomposición en fracciones parciales de
-%  \begin{align*}
+%  \begin{align}
 %  \frac{x^{5}-3x^{2}+12x-1}{x^{3}\left( x^{2}+x+1 \right)\left( x^{2}+3 \right)^{3}}
-% \end{align*}
+% \end{align}
 % sin determinar los respectivos coeficientes.
 % \end{resuelto}
 %
@@ -300,9 +300,9 @@ Otro m\'etodo útil que se recomienda repasar es la
 % \begin{resuelto}
 %  \label{pre:exmp:9.8.5}
 %  Encuentre la descomposición en fracciones parciales de
-%  \begin{align*}
+%  \begin{align}
 %  \dfrac{2x^{4}+4x^{3}-2x^{2}+x+7}{x^{3}+2x^{2}-x-2}
-% \end{align*}
+% \end{align}
 % sin determinar los coeficientes.
 % \end{resuelto}
 %
