--- a/latex/transformada_laplace.tex
+++ b/latex/transformada_laplace.tex
@@ -137,14 +137,14 @@ $$
 \subsection{Propiedades}
 
 \subsection{Propiedades de la Transformada de Laplace}
-\begin{align*}
+\begin{align}
   \label{bron:21.4}
   \tag{PTL2}
   \lap{e^{ax}f(x)}&=F(s-a)\\
   \label{bron:21.5}
   \tag{PTL3}
   \lap{x^{n}f(x)}&=(-1)^{n}\dfrac{d^{n}}{ds^{n}}\left( F(s) \right)
-\end{align*}
+\end{align}
 
 
 %
@@ -188,10 +188,10 @@ $$
 
 
 {}
-\begin{align*}
+\begin{align}
 \label{tlt:22}
 \lap{t^{n}e^{at}} = \dfrac{n!}{\left( s-a \right)^{n+1}}
-\end{align*}
+\end{align}
 
 
  \begin{resuelto}
