--- a/latex/transformada_laplace_derivadas.tex
+++ b/latex/transformada_laplace_derivadas.tex
@@ -35,11 +35,11 @@ entonce \eqref{bron:24.3} se puede reescribir como
 
 
  \subsection{Casos Especiales}
- \begin{align*}
+ \begin{align}
   \label{bron:24.4}
   \lap{y'(x)}&=sY(s)-c_{0}\\
   \lap{y''(x)}&=s^{2}Y(s)-c_{0}s-c_{1}.
- \end{align*}
+ \end{align}
 
 
 
