--- a/latex/valores_propios.tex
+++ b/latex/valores_propios.tex
@@ -112,7 +112,7 @@ p(\lam)=(-1)^{n}\det(A-\lam I)=\det(\lam I - A)
 
 \begin{solucion}
  Primero determinamos el polinomio característico:
-\begin{align*}
+\begin{align}
  p(\lam)&= -
 \begin{vmatrix}
 3 - \lam & 1 & -1 \\
@@ -120,7 +120,7 @@ p(\lam)=(-1)^{n}\det(A-\lam I)=\det(\lam I - A)
 2 & 2 & -\lam
   \end{vmatrix}\\
   &=\lam^{3}-5\lam^{2}+8\lam-4\\ &=(\lam-1)(\lam-2)^{2}.
-\end{align*}
+\end{align}
 
 Los valores propios de $A$ son las raices de $p(\lam)=(x-1)(x-2)^{2},$ es decir,
 $$
