reordené ejemplos de soluciones

--- a/latex/fundamentos_ecuaciones_diferenciales.tex
+++ b/latex/fundamentos_ecuaciones_diferenciales.tex
@@ -10,12 +10,14 @@
 \end{itemize}
 \end{definicion}
 
-\begin{resuelto}
-	Clasifica cada una de las siguientes ecuaciones diferenciales enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 
-\begin{align}
+
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
+	\begin{align}
 	x^2y''+xy'+\left(x^2-n^2\right)y = 0
 \end{align}
+\end{resuelto}
 
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
@@ -27,10 +29,12 @@
 \end{proof}
 
 
-
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \begin{align}
 	\dfrac{dx}{dy}= x^{2}+y^{2}
 \end{align}
+\end{resuelto}
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
 		\item Orden 1;
@@ -41,10 +45,12 @@
 \end{proof}
 
 
-
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \begin{align}
 	\dfrac{dy}{dx}= \dfrac{1}{x^{2}+y^{2}}
 \end{align}
+\end{resuelto}
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
 		\item Orden 1;
@@ -55,10 +61,12 @@
 \end{proof}
 
 
-
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \begin{align}
 	\left(\dfrac{d^{2}u}{dt^{2}}\right)^{3}+u^{4}=1
 \end{align}
+\end{resuelto}
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
 		\item Orden 2;
@@ -70,10 +78,12 @@
 
 
 
-
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \begin{align}
 	\dfrac{\partial^{2}Y}{\partial t^{2}} = 2\dfrac{\partial^{2}Y}{\partial x^{2}}
 \end{align}
+\end{resuelto}
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
 		\item Orden 2;
@@ -85,10 +95,12 @@
 
 
 
-
+\begin{resuelto}
+	Clasifica la siguiente ecuación diferencial enunciando su orden; sus variables dependientes e independientes; y si es ordinaria o parcial:
 \begin{align}
 	\left(x^{2}+2y^{2}\right)dx +\left(3x^{3}-4y^{2}\right)dy=0
 \end{align}
+\end{resuelto}
 \begin{proof}[Solución]
 	\begin{enumerate}[(i)]
 		\item Orden 1;
@@ -99,7 +111,6 @@
 \end{proof}
 
 
-\end{resuelto}
 
 
 	\begin{definicion}
@@ -139,6 +150,13 @@
 %%%
 
 
+\begin{definicion}
+	De manera general, una solución general de orden $ n $ tiene $ n $ parámetros (constantes arbitrarias esenciales) y por tanto, geométricamente representa una \emph{familia de curvas $n-$paramétrica. }
+
+	De manera reciproca, una relación con $ n $ constantes arbitrarias (también llamada \emph{primitiva}) tiene asociada una ecuación diferencial de orden $n$ (de la cual es solución general), llamada la \emph{ecuación diferencial de la familia}.
+
+\end{definicion}
+
 \subsection{Soluciones de ecuaciones diferenciales}
 
 \begin{itemize}
@@ -150,6 +168,7 @@
 \end{itemize}
 
 
+\subsection{Ejemplos de soluciones}
 
 	\begin{resuelto}
 		\label{exmp 02:06}
@@ -170,21 +189,10 @@
 	\end{resuelto}
 
 
-\begin{definicion}
-	Una solución general de orden $ n $ tiene $ n $ parámetros (constantes arbitrarias esenciales) y por tanto, geométricamente representa una \emph{familia de curvas $n-$paramétrica. }
 
-	De manera reciproca, una relación con $ n $ constantes arbitrarias (también llamada \emph{primitiva}) tiene asociada una ecuación diferencial de orden $n$ (de la cual es solución general), llamada la \emph{ecuación diferencial de la familia}.
+\begin{resuelto}
 
-\end{definicion}
-
-\subsection{Ejemplos de soluciones}
-
-
-Para cada una de las siguientes ecuaciones, verifica si la relación indicada es solución; y en ese caso, determina si es general.
-
-
-
-
+	Verifica si la relación indicada es una solución de la ecuación diferencial; y en ese caso, determina si la solución es general.
 \begin{align}
 	\begin{cases}
 		y'-x+y=0\\
@@ -192,6 +200,7 @@ Para cada una de las siguientes ecuaciones, verifica si la relación indicada es
 	\end{cases}
 \end{align}
 
+\end{resuelto}
 
 
 \begin{proof}[Solución]
@@ -204,13 +213,17 @@ Para cada una de las siguientes ecuaciones, verifica si la relación indicada es
 \end{proof}
 
 
+\begin{resuelto}
 
+	Verifica si la relación indicada es una solución de la ecuación diferencial; y en ese caso, determina si la solución es general.
 \begin{align}
 	\begin{cases}
 		\dfrac{dy}{dx}=\dfrac{2xy}{3y^{2}-x^{2}}\\
 		x^{2}y-y^{3}=c
 	\end{cases}
 \end{align}
+
+\end{resuelto}
 
 
 
@@ -229,7 +242,9 @@ Para cada una de las siguientes ecuaciones, verifica si la relación indicada es
 \end{proof}
 
 
+\begin{resuelto}
 
+	Verifica si la relación indicada es una solución de la ecuación diferencial; y en ese caso, determina si la solución es general.
 \begin{align}
 	\label{problem 2.2:c}
 	\begin{cases}
@@ -239,6 +254,7 @@ Para cada una de las siguientes ecuaciones, verifica si la relación indicada es
 	\end{cases}
 \end{align}
 
+\end{resuelto}
 
 
 \begin{proof}[Solución]
@@ -262,13 +278,16 @@ Para cada una de las siguientes ecuaciones, verifica si la relación indicada es
 \end{proof}
 
 
+\begin{resuelto}
 
+	Verifica si la relación indicada es una solución de la ecuación diferencial; y en ese caso, determina si la solución es general.
 \begin{align}
 	\begin{cases}
 		x^{3}\left(\dfrac{d^{2}v}{dx^{2}}\right)^{2} = 2v\dfrac{dv}{dx} \\
 		v = cx^{2}
 	\end{cases}
 \end{align}
+\end{resuelto}
 
 
 
